
lib_LIBRARIES = libafs.a
libafs_a_CFLAGS = \
	-I${top_srcdir}/inc \
	-I${top_srcdir}/thirdparty/minixml/inc \
    -I$(LIBBOXING_DIR)/inc \
    -I$(LIBBOXING_DIR)/thirdparty/glib 

libafs_a_SOURCES = \
    toc/previewsections.c \
    toc/previewlayoutdefinitions.c \
    toc/previewsection.c \
    toc/previewimageutils.c \
    toc/previewlayoutdefinition.c \
    xmlutils.c \
    tocfiles.c \
    sha1.c \
    tocdatareels.c \
    frameranges.c \
    technicalmetadata.c \
    sha256.c \
    tocfile.c \
    administrativemetadata.c \
    tocfilepreviewpage.c \
    controldata.c \
    tocmetadatasource.c \
    afs.c \
    zeroreferenceframe.c \
    tocfilepreview.c \
    controlframe/boxingformat.c \
    tocdatafilemetadatasource.c \
    framerange.c \
    tocdatafilemetadata.c \
    sha1hash.c \
    tocmetadata.c \
    tocdata.c \
    controlframeboxingformat.c \
    tocdatareel.c \
    sha256hash.c \
    ../thirdparty/minixml/src/mxml-entity.c \
    ../thirdparty/minixml/src/mxml-get.c \
    ../thirdparty/minixml/src/mxml-node.c \
    ../thirdparty/minixml/src/mxml-set.c \
    ../thirdparty/minixml/src/mxml-attr.c \
    ../thirdparty/minixml/src/mxml-file.c \
    ../thirdparty/minixml/src/mxml-index.c \
    ../thirdparty/minixml/src/mxml-private.c \
    ../thirdparty/minixml/src/mxml-search.c \
    ../thirdparty/minixml/src/mxml-string.c

nobase_include_HEADERS = \
    ../inc/administrativemetadata.h \
    ../inc/controldata.h \
    ../inc/controlframe/boxingformat.h \
    ../inc/controlframeboxingformat.h \
    ../inc/framerange.h \
    ../inc/frameranges.h \
    ../inc/platform/io.h \
    ../inc/sha1.h \
    ../inc/sha1hash.h \
    ../inc/sha256.h \
    ../inc/sha256hash.h \
    ../inc/technicalmetadata.h \
    ../inc/tocdata_c.h \
    ../inc/tocdatafilemetadata_c.h \
    ../inc/tocdatafilemetadatasource_c.h \
    ../inc/tocdatareel_c.h \
    ../inc/tocdatareels.h \
    ../inc/tocfile.h \
    ../inc/tocfilepreview.h \
    ../inc/tocfilepreviewpage.h \
    ../inc/tocfiles.h \
    ../inc/tocmetadata_c.h \
    ../inc/tocmetadatasource_c.h \
    ../inc/toc/previewimageutils.h \
    ../inc/toc/previewlayoutdefinition.h \
    ../inc/toc/previewlayoutdefinitions.h \
    ../inc/toc/previewsection.h \
    ../inc/toc/previewsections.h \
    ../inc/xmlutils.h \
    ../inc/zeroreferenceframe.h \
    ../thirdparty/minixml/inc/mxml.h
