
lib_LIBRARIES = libafs.a
libafs_a_CFLAGS = \
	-I${top_srcdir}/inc \
	-I${top_srcdir}/thirdparty/minixml/inc \
    -I$(LIBBOXING_DIR)/include \
    -I$(LIBBOXING_DIR)/thirdparty/glib 

libafs_a_SOURCES = \
    toc/previewsections.c \
    toc/previewlayoutdefinitions.c \
    toc/previewsection.c \
    toc/previewimageutils.c \
    toc/previewlayoutdefinition.c \
    xmlutils.c \
    tocfiles.c \
    sha1.c \
    tocdatareels.c \
    frameranges.c \
    technicalmetadata.c \
    sha256.c \
    tocfile.c \
    administrativemetadata.c \
    tocfilepreviewpage.c \
    controldata.c \
    tocmetadatasource.c \
    afs.c \
    zeroreferenceframe.c \
    tocfilepreview.c \
    controlframe/boxingformat.c \
    tocdatafilemetadatasource.c \
    framerange.c \
    tocdatafilemetadata.c \
    sha1hash.c \
    tocmetadata.c \
    tocdata.c \
    controlframeboxingformat.c \
    tocdatareel.c \
    sha256hash.c \
    ../thirdparty/minixml/src/mxml-entity.c \
    ../thirdparty/minixml/src/mxml-get.c \
    ../thirdparty/minixml/src/mxml-node.c \
    ../thirdparty/minixml/src/mxml-set.c \
    ../thirdparty/minixml/src/mxml-attr.c \
    ../thirdparty/minixml/src/mxml-file.c \
    ../thirdparty/minixml/src/mxml-index.c \
    ../thirdparty/minixml/src/mxml-private.c \
    ../thirdparty/minixml/src/mxml-search.c \
    ../thirdparty/minixml/src/mxml-string.c

nobase_include_HEADERS = \
    ../thirdparty/minixml/inc/mxml.h
